[gd_scene load_steps=8 format=2]

[ext_resource path="res://menus/MCustomGame.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/Roboto/Roboto-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/dynamic/h2_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://minesweeper/gui/GrassTileMap.tscn" type="PackedScene" id=5]

[sub_resource type="OpenSimplexNoise" id=2]
octaves = 1
period = 200.0

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 3 )

[node name="Control" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="GrassTileMap" parent="." instance=ExtResource( 5 )]
noise = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 774.0
margin_top = 478.0
margin_right = 1274.0
margin_bottom = 722.0
custom_constants/separation = 15

[node name="Panel" type="Panel" parent="VBoxContainer"]
margin_right = 500.0
margin_bottom = 200.0
rect_min_size = Vector2( 500, 200 )
rect_pivot_offset = Vector2( 250, 150 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="VBoxContainer/Panel/VBoxContainer"]
margin_right = 500.0
margin_bottom = 57.0
size_flags_vertical = 7
custom_fonts/font = ExtResource( 4 )
text = "Partie personnalis√©"
align = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/Panel/VBoxContainer"]
margin_top = 61.0
margin_right = 500.0
margin_bottom = 65.0

[node name="WidthContainer" type="HBoxContainer" parent="VBoxContainer/Panel/VBoxContainer"]
margin_top = 69.0
margin_right = 500.0
margin_bottom = 100.0

[node name="Label" type="Label" parent="VBoxContainer/Panel/VBoxContainer/WidthContainer"]
margin_top = 1.0
margin_right = 113.0
margin_bottom = 30.0
text = "Longueur :"

[node name="WidthSpinBox" type="SpinBox" parent="VBoxContainer/Panel/VBoxContainer/WidthContainer"]
unique_name_in_owner = true
margin_left = 409.0
margin_right = 500.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( -488, -17 )
size_flags_horizontal = 10
size_flags_vertical = 3
min_value = 2.0
value = 9.0

[node name="HeightContainer" type="HBoxContainer" parent="VBoxContainer/Panel/VBoxContainer"]
margin_top = 104.0
margin_right = 500.0
margin_bottom = 135.0

[node name="Label" type="Label" parent="VBoxContainer/Panel/VBoxContainer/HeightContainer"]
margin_top = 1.0
margin_right = 97.0
margin_bottom = 30.0
text = "Hauteur :"

[node name="HeightSpinBox" type="SpinBox" parent="VBoxContainer/Panel/VBoxContainer/HeightContainer"]
unique_name_in_owner = true
margin_left = 409.0
margin_right = 500.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( -488, -17 )
size_flags_horizontal = 10
size_flags_vertical = 3
min_value = 2.0
value = 9.0

[node name="Percentage" type="HBoxContainer" parent="VBoxContainer/Panel/VBoxContainer"]
margin_top = 139.0
margin_right = 500.0
margin_bottom = 170.0

[node name="Label" type="Label" parent="VBoxContainer/Panel/VBoxContainer/Percentage"]
margin_top = 1.0
margin_right = 140.0
margin_bottom = 30.0
text = "% de mines : "

[node name="MinesSlider" type="HSlider" parent="VBoxContainer/Panel/VBoxContainer/Percentage"]
unique_name_in_owner = true
margin_left = 144.0
margin_right = 405.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.15

[node name="MinesPercentage" type="SpinBox" parent="VBoxContainer/Panel/VBoxContainer/Percentage"]
unique_name_in_owner = true
margin_left = 409.0
margin_right = 500.0
margin_bottom = 31.0
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.15

[node name="ValidateButton" type="Button" parent="VBoxContainer/Panel/VBoxContainer"]
margin_top = 174.0
margin_right = 500.0
margin_bottom = 203.0
custom_fonts/font = SubResource( 1 )
text = "Valider"

[node name="BackButton" type="Button" parent="VBoxContainer"]
margin_top = 215.0
margin_right = 500.0
margin_bottom = 244.0
text = "Retour"

[connection signal="resized" from="." to="." method="_on_Control_resized"]
[connection signal="pressed" from="VBoxContainer/Panel/VBoxContainer/ValidateButton" to="." method="_on_ValidateButton_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
